# EMS

./: .env.example  .gitignore  01_PRD_主文档.md  02_数据模型与DB_Schema.md  03_API规格.md  04_架构与模块目录结构.md  05_Sprint开发计划.md  06_Claude_Code_启动提示词.md  CLAUDE.md  Makefile  PROGRESS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_alarm_check_constraints.py
backend/app/: __init__.py  main.py  scheduler.py  seed.py
backend/tests/: conftest.py  test_alarm_batch_isolation.py  test_alarm_check_constraints.py  test_alarm_unmatched.py  test_anti_flood.py  test_backfill_chunk.py  test_backfill_runtime.py  test_config_crypto_headers.py  test_config_security.py  test_config_sync_guard.py  test_config_sync_lock.py  test_crypto.py  test_crypto_roundtrip.py  test_deps_rbac.py  test_digest_flush.py  test_dispatcher_masked.py  test_dispatcher_send.py  test_ems_client.py  test_ems_connection.py  test_ems_protocol.py  test_history_caps.py  test_history_layer.py  test_history_time.py  test_ingest_failure.py  test_ingest_parse.py  test_ingest_realtime_flow.py  test_lifecycle_fsm.py  test_metrics.py  test_notify_adapters.py  test_notify_channel_schema.py  test_notify_channels.py  test_notify_config_crypto.py  test_notify_dedup.py  test_notify_recipient_update.py  test_notify_retry.py  test_notify_route.py  test_push_server.py  test_report_cron_validation.py  test_report_export.py  test_report_service.py  (+11 more)
docs/: 运维-备份与恢复.md  (+1 more)
(+134 files in other folders)
